samples/_failures_safe/1761597479_67569a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_912b8078.c: In function ‘main’:
./samples/SAFE/__tmp_912b8078.c:141:20: error: missing terminating " character
  141 |             printf("
      |                    ^
./samples/SAFE/__tmp_912b8078.c:141:13: error: expected expression at end of input
  141 |             printf("
      |             ^~~~~~
./samples/SAFE/__tmp_912b8078.c:141:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_912b8078.c:141:13: error: expected declaration or statement at end of input
